@@ -5,6 +5,19 @@ namespace Herwig {
 namespace Math {
 using ThePEG::Complex;
 
+  namespace {
+Complex Li2Prod(Complex y,Complex y2)
+{
+  static double a1   =-0.250000000000000e0,a2   =-0.111111111111111e0;
+  static double a3   =-0.010000000000000e0,a4   =-0.017006802721088e0;
+  static double a5   =-0.019444444444444e0,a6   =-0.020661157024793e0;
+  static double a7   =-0.021417300648069e0,a8   =-0.021948866377231e0;
+  static double a9   =-0.022349233811171e0,a10  =-0.022663689135191e0;
+  return y*(1.+a1*y*(1.+a2*y*(1.+a3*y2*(1.+a4*y2*(1.+a5*y2*
+	(1.+a6*y2*(1.+a7*y2*(1.+a8*y2*(1.+a9*y2*(1.+a10*y2))))))))));
+}
+  }
+
 Complex Li2(Complex x)
 {
   Complex z;
@@ -22,7 +35,8 @@ Complex Li2(Complex x)
     }
   else if(r2==1.&&xi==0.)
     {
-      return zeta2;
+      if(xr>0){return zeta2;}
+      else{return -0.5*zeta2;}
     }
   else if(r2<=1.&&xr>0.5)
     {
