@@ -1,8 +1,10 @@
-2005-09-29  Pete's account  <Peter.Richardson@durham.ac.uk>
+2005-09-29  Peter Richardson  <Peter.Richardson@durham.ac.uk>
+
+	* Utilities/Math.h (Repository): changes so private power series for dilog is not publically visible
 
 	* Decay/MamboDecayer.h (Repository): removed 5 body decay option from Hw64Decayer
 
-2005-09-28  Pete's account  <Peter.Richardson@durham.ac.uk>
+2005-09-28  Peter Richardson  <Peter.Richardson@durham.ac.uk>
 
 	* Decay/Baryon/BaryonFactorizedDecayer.h (Repository): added all .so files needed by library to all classes to ensure correct dynamic loading
 
